tools/tests/errors/surf_name_10.ki
# name resolution: undefined name referenced in a class method body
class C:
    var run = Function(self):
        return missing
discard C().run()
